--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/x-data-grid": "^7.7.1",
+    "@mui/x-data-grid": "^7.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
